2005-08-18  Andrew Cagney  <cagney@redhat.com>

	* Makefile.gen.sh: For .jar files, use the specified path.
	
	* Makefile.gen.sh (has_main): Make java pattern more robust.

2005-08-17  Andrew Cagney  <cagney@redhat.com>

	* Makefile.gen.sh: Add TestJUnits to GEN_BUILT_CLASSES.

2005-08-15  Andrew Cagney  <cagney@redhat.com>

	* Makefile.rules (.java.classes): Pipe "ls" errors to /dev/null.

2005-08-13  Andrew Cagney  <cagney@redhat.com>

	* Makefile.gen.sh: Generate "main" rules for .java, .cxx, and .c.
	* Makefile.rules (AM_LDFLAGS): Delete.
	
2005-08-12  Andrew Cagney  <cagney@redhat.com>

	* Makefile.rules (.classes.h): Add explicit -I. to GCJH command.

2005-08-11  Andrew Cagney  <cagney@redhat.com>

	* Makefile.rules (.jar.db): Add rule.
	(GCJCOMPILE): Optionally define.
	* Makefile.gen.sh: Allow .jar files as command line parameters,
	generate rules to convert them into .so / shared-libraries.

2005-08-11  Andrew Cagney  <cagney@redhat.com>

	* Makefile.rules (JUNIT_JAR): Delete rules for building junit,
	moved to frysk-imports/.
	
	* Makefile.rules (.java.classes): Simplify, use `ls' to find the
	list of class files.

2005-08-07  Andrew Cagney  <cagney@redhat.com>

	* Makefile.gen.sh: Fix grep filtering out non-standalone *Test*.

	* Makefile.gen.sh: Simplify, handle each suffix separatly.
	Generate a single TestJUnits.java at the top leve.
	* Makefile.rules: Update to match.
	
	* Makefile.gen.sh: Generate explicit .o.classes dependency so that
	the .o file is built before the .classes.
	* Makefile.rules (JAVAC, JAVACFLAGS, GEN_CLASSPATH,
	GEN_SOURCEPATH): Define, add JUNIT_JAR to classpath.
	(.java.classes): Simplify rule, use JAVAC.
	(.classes.o): Delete rule.
	
2005-08-05  Andrew Cagney  <cagney@redhat.com>

	* Makefile.rules (SUFFIXES, BUILT_SOURCES, CLEANFILES)
	(noinst_PROGRAMS, bin_PROGRAMS, noinst_LIBRARIES, LDADD)
	(check_SCRIPTS, TESTS, AM_LDFLAGS, AM_GCJFLAGS, AM_CXXFLAGS):
	Provide defaults.
